vibe new pipeline