@@ -1,5 +1,7 @@
 package rogo.sketch.core.packet;
 
+import it.unimi.dsi.fastutil.objects.Object2ObjectLinkedOpenHashMap;
+import it.unimi.dsi.fastutil.objects.ObjectArrayList;
 import rogo.sketch.core.backend.BackendStageScope;
 import rogo.sketch.core.driver.GraphicsDriver;
 import rogo.sketch.core.driver.state.snapshot.SnapshotScope;
@@ -12,14 +14,16 @@ import rogo.sketch.core.pipeline.PipelineType;
 import rogo.sketch.core.pipeline.RenderContext;
 import rogo.sketch.core.pipeline.RenderStateManager;
 import rogo.sketch.core.pipeline.kernel.FrameExecutionPlan;
+import rogo.sketch.core.pipeline.kernel.PacketGroup;
+import rogo.sketch.core.pipeline.kernel.PipelineExecutionSlice;
 import rogo.sketch.core.pipeline.kernel.StageExecutionPlan;
 import rogo.sketch.core.pipeline.module.diagnostic.RenderTraceRecorder;
+import rogo.sketch.core.pipeline.submit.StageSubmitNode;
+import rogo.sketch.core.pipeline.submit.StageWindow;
 import rogo.sketch.core.util.KeyId;
 
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.Comparator;
-import java.util.LinkedHashMap;
 import java.util.LinkedHashSet;
 import java.util.List;
 import java.util.Map;
@@ -29,51 +33,46 @@ public class RenderPacketQueue<C extends RenderContext> {
     private static final KeyId DEFERRED_TRANSLUCENT_SCOPE = KeyId.of("sketch:deferred_translucent_scope");
 
     private final GraphicsPipeline<C> graphicsPipeline;
-    private final Map<PipelineType, Map<PipelineStateKey, List<RenderPacket>>> packetsByPipeline;
-    private final Map<PipelineType, Map<KeyId, Map<PipelineStateKey, List<RenderPacket>>>> packetsByPipelineAndStage;
-    private final Map<KeyId, StageExecutionPlan> stagePlans;
-    private final Set<KeyId> stagedPackets = new LinkedHashSet<>();
-    private final Map<PipelineType, Map<PipelineStateKey, List<RenderPacket>>> deferredTranslucentPackets = new LinkedHashMap<>();
+    private final Object2ObjectLinkedOpenHashMap<KeyId, StageExecutionPlan> stagePlans = new Object2ObjectLinkedOpenHashMap<>();
+    private final Object2ObjectLinkedOpenHashMap<PipelineType, ObjectArrayList<PacketGroup>> deferredTranslucentPackets =
+            new Object2ObjectLinkedOpenHashMap<>();
 
     public RenderPacketQueue(GraphicsPipeline<C> graphicsPipeline) {
         this.graphicsPipeline = graphicsPipeline;
-        this.packetsByPipeline = new LinkedHashMap<>();
-        this.packetsByPipelineAndStage = new LinkedHashMap<>();
-        this.stagePlans = new LinkedHashMap<>();
-        for (PipelineType type : graphicsPipeline.getPipelineTypes()) {
-            initializePipeline(type);
-        }
-    }
-
-    private void initializePipeline(PipelineType pipelineType) {
-        packetsByPipeline.put(pipelineType, new LinkedHashMap<>());
-        packetsByPipelineAndStage.put(pipelineType, new LinkedHashMap<>());
     }
 
     public void installExecutionPlan(FrameExecutionPlan executionPlan) {
-        clear();
         if (executionPlan == null || executionPlan.isEmpty()) {
+            clear();
             return;
         }
 
-        for (Map.Entry<KeyId, StageExecutionPlan> entry : executionPlan.stagePlans().entrySet()) {
+        Map<KeyId, StageExecutionPlan> nextStagePlans = executionPlan.stagePlans();
+        List<KeyId> removedStages = new ArrayList<>();
+        for (KeyId stageId : stagePlans.keySet()) {
+            if (!nextStagePlans.containsKey(stageId)) {
+                removedStages.add(stageId);
+            }
+        }
+        for (KeyId removedStage : removedStages) {
+            removeStagePlan(removedStage);
+        }
+
+        for (Map.Entry<KeyId, StageExecutionPlan> entry : nextStagePlans.entrySet()) {
             KeyId stageId = entry.getKey();
             StageExecutionPlan stagePlan = entry.getValue();
             if (stageId == null || stagePlan == null || stagePlan.isEmpty()) {
+                removeStagePlan(stageId);
                 continue;
             }
-
-            stagePlans.put(stageId, stagePlan);
-            stagedPackets.add(stageId);
-            for (Map.Entry<PipelineType, Map<PipelineStateKey, List<RenderPacket>>> pipelineEntry : stagePlan.packets().entrySet()) {
-                PipelineType pipelineType = pipelineEntry.getKey();
-                for (Map.Entry<PipelineStateKey, List<RenderPacket>> stateEntry : pipelineEntry.getValue().entrySet()) {
-                    traceQueued(stageId, stateEntry.getValue());
-                    for (RenderPacket packet : stateEntry.getValue()) {
-                        addPacketInternal(pipelineType, packet, false);
-                    }
-                }
+            StageExecutionPlan existingPlan = stagePlans.get(stageId);
+            if (existingPlan != null
+                    && stagePlan.planHash() == existingPlan.planHash()
+                    && stagePlan.equals(existingPlan)) {
+                continue;
             }
+            removeStagePlan(stageId);
+            installStagePlan(stageId, stagePlan);
         }
     }
 
@@ -81,8 +80,8 @@ public class RenderPacketQueue<C extends RenderContext> {
         addPacketInternal(pipelineType, packet, true);
     }
 
-    public void addPackets(PipelineType pipelineType, Map<PipelineStateKey, List<RenderPacket>> packets) {
-        for (Map.Entry<PipelineStateKey, List<RenderPacket>> entry : packets.entrySet()) {
+    public void addPackets(PipelineType pipelineType, Map<ExecutionKey, List<RenderPacket>> packets) {
+        for (Map.Entry<ExecutionKey, List<RenderPacket>> entry : packets.entrySet()) {
             for (RenderPacket packet : entry.getValue()) {
                 addPacketInternal(pipelineType, packet, true);
             }
@@ -129,9 +128,7 @@ public class RenderPacketQueue<C extends RenderContext> {
             return;
         }
 
-        SnapshotScope snapshotScope = StageExecutionPlan
-                .fromPackets(DEFERRED_TRANSLUCENT_SCOPE, deferredTranslucentPackets)
-                .stageSnapshotScope();
+        SnapshotScope snapshotScope = buildDeferredTranslucentSnapshotScope();
         try (BackendStageScope ignored = GraphicsDriver.runtime().frameExecutor().beginExecutionScope(
                 graphicsPipeline,
                 this,
@@ -147,12 +144,13 @@ public class RenderPacketQueue<C extends RenderContext> {
         GraphicsDriver.runtime().frameExecutor().executeImmediate(graphicsPipeline, packet, manager, context);
     }
 
-    public Map<PipelineStateKey, List<RenderPacket>> packetsForStage(PipelineType pipelineType, KeyId stageId) {
-        Map<KeyId, Map<PipelineStateKey, List<RenderPacket>>> stageMap = packetsByPipelineAndStage.get(pipelineType);
-        if (stageMap == null) {
+    public Map<ExecutionKey, List<RenderPacket>> packetsForStage(PipelineType pipelineType, KeyId stageId) {
+        StageExecutionPlan stagePlan = stagePlans.get(stageId);
+        if (stagePlan == null) {
             return Map.of();
         }
-        return stageMap.getOrDefault(stageId, Map.of());
+        PipelineExecutionSlice slice = stagePlan.pipelineSlice(pipelineType);
+        return slice != null ? slice.packetMap() : Map.of();
     }
 
     public StageExecutionPlan stagePlan(KeyId stageId) {
@@ -174,69 +172,57 @@ public class RenderPacketQueue<C extends RenderContext> {
     }
 
     public Set<KeyId> stagedPacketIds() {
-        return Set.copyOf(stagedPackets);
+        return Set.copyOf(stagePlans.keySet());
     }
 
     public void clear() {
-        for (Map<PipelineStateKey, List<RenderPacket>> packets : packetsByPipeline.values()) {
-            packets.clear();
-        }
-        for (Map<KeyId, Map<PipelineStateKey, List<RenderPacket>>> stageMap : packetsByPipelineAndStage.values()) {
-            stageMap.clear();
-        }
         stagePlans.clear();
-        stagedPackets.clear();
         deferredTranslucentPackets.clear();
     }
 
+    private void removeStagePlan(KeyId stageId) {
+        if (stageId == null) {
+            return;
+        }
+        stagePlans.remove(stageId);
+    }
+
+    private void installStagePlan(KeyId stageId, StageExecutionPlan stagePlan) {
+        if (stageId == null || stagePlan == null || stagePlan.isEmpty()) {
+            return;
+        }
+        stagePlans.put(stageId, stagePlan);
+        for (PipelineExecutionSlice pipelineSlice : stagePlan.pipelineSlices()) {
+            if (pipelineSlice == null || pipelineSlice.isEmpty()) {
+                continue;
+            }
+            for (int i = 0; i < pipelineSlice.groupCount(); i++) {
+                traceQueued(stageId, pipelineSlice.groupAt(i).packetView());
+            }
+        }
+    }
+
     public boolean isEmpty() {
-        return stagedPackets.isEmpty();
+        return stagePlans.isEmpty();
     }
 
     private void executeStageInternal(KeyId stageId, RenderStateManager manager, C context) {
-        PipelineConfig config = graphicsPipeline.getConfig();
-        PipelineConfig.TranslucencyStrategy strategy = config.getTranslucencyStrategy();
         GraphicsStage stage = graphicsPipeline.getStage(stageId);
-        List<PipelineType> pipelineTypes = graphicsPipeline.getPipelineTypes();
 
         EventBusBridge.post(new GraphicsPipelineStageEvent<>(graphicsPipeline, stageId, context, GraphicsPipelineStageEvent.Phase.PRE));
         context.preStage(stageId);
 
         try {
-            switch (strategy) {
-                case INTERLEAVED -> {
-                    for (PipelineType pipelineType : pipelineTypes) {
-                        executeStageForPipeline(pipelineType, stageId, manager, context);
-                    }
-                }
-                case DEDICATED_STAGES -> {
-                    for (PipelineType pipelineType : pipelineTypes) {
-                        if (PipelineType.TRANSLUCENT.equals(pipelineType)) {
-                            accumulateTranslucentPackets(pipelineType, stageId);
-                        } else {
-                            executeStageForPipeline(pipelineType, stageId, manager, context);
-                        }
-                    }
-
-                    boolean isDedicated = stage != null && stage.isDedicatedTranslucentStage()
-                            || config.isDedicatedTranslucentStage(stageId);
-                    if (isDedicated) {
-                        flushDeferredTranslucentPackets(manager, context);
-                    }
-                }
-                case FLEXIBLE -> {
-                    for (PipelineType pipelineType : pipelineTypes) {
-                        if (!PipelineType.TRANSLUCENT.equals(pipelineType)) {
-                            executeStageForPipeline(pipelineType, stageId, manager, context);
-                        }
-                    }
-
-                    if (shouldTranslucentFollowSolid(stage, stageId, config)) {
-                        executeStageForPipeline(PipelineType.TRANSLUCENT, stageId, manager, context);
-                    } else {
-                        accumulateTranslucentPackets(PipelineType.TRANSLUCENT, stageId);
-                    }
-                }
+            for (StageWindow window : StageWindow.executionOrder()) {
+                executeStageSubmitNodes(stageId, window, manager, context);
+                GraphicsDriver.runtime().frameExecutor().executeStageWindow(
+                        graphicsPipeline,
+                        this,
+                        stage,
+                        stageId,
+                        window,
+                        manager,
+                        context);
             }
         } finally {
             context.postStage(stageId);
@@ -244,47 +230,101 @@ public class RenderPacketQueue<C extends RenderContext> {
         }
     }
 
-    private void executeStageForPipeline(PipelineType pipelineType, KeyId stageId, RenderStateManager manager, C context) {
-        Map<KeyId, Map<PipelineStateKey, List<RenderPacket>>> stageMap = packetsByPipelineAndStage.get(pipelineType);
-        if (stageMap == null) {
+    private void executeStageSubmitNodes(KeyId stageId, StageWindow window, RenderStateManager manager, C context) {
+        List<StageSubmitNode> submitNodes = graphicsPipeline.stageSubmitNodes(stageId, window);
+        if (submitNodes.isEmpty()) {
             return;
         }
-
-        Map<PipelineStateKey, List<RenderPacket>> stagePackets = stageMap.get(stageId);
-        if (stagePackets == null || stagePackets.isEmpty()) {
-            return;
+        for (StageSubmitNode submitNode : submitNodes) {
+            submitNode.execute(graphicsPipeline, this, manager, context);
         }
-
-        executePacketMap(stagePackets, manager, context);
     }
 
-    private void executePacketMap(Map<PipelineStateKey, List<RenderPacket>> packetMap, RenderStateManager manager, C context) {
-        for (Map.Entry<PipelineStateKey, List<RenderPacket>> entry : packetMap.entrySet()) {
+    public void executeStageDispatchWindow(KeyId stageId, RenderStateManager manager, C context) {
+        for (PipelineType pipelineType : graphicsPipeline.getPipelineTypes()) {
+            if (PipelineType.COMPUTE.equals(pipelineType) || PipelineType.FUNCTION.equals(pipelineType)) {
+                executeStageForPipeline(pipelineType, stageId, manager, context);
+            }
+        }
+    }
+
+    public void executeStageDrawWindow(
+            KeyId stageId,
+            GraphicsStage stage,
+            RenderStateManager manager,
+            C context) {
+        PipelineConfig config = graphicsPipeline.getConfig();
+        PipelineConfig.TranslucencyStrategy strategy = config.getTranslucencyStrategy();
+
+        switch (strategy) {
+            case INTERLEAVED -> {
+                executeStageForPipeline(PipelineType.RASTERIZATION, stageId, manager, context);
+                executeStageForPipeline(PipelineType.TRANSLUCENT, stageId, manager, context);
+            }
+            case DEDICATED_STAGES -> {
+                executeStageForPipeline(PipelineType.RASTERIZATION, stageId, manager, context);
+
+                if (!hasStagePipelinePackets(stageId, PipelineType.TRANSLUCENT)) {
+                    return;
+                }
+
+                accumulateTranslucentPackets(PipelineType.TRANSLUCENT, stageId);
+                boolean isDedicated = stage != null && stage.isDedicatedTranslucentStage()
+                        || config.isDedicatedTranslucentStage(stageId);
+                if (isDedicated) {
+                    flushDeferredTranslucentPackets(manager, context);
+                }
+            }
+            case FLEXIBLE -> {
+                executeStageForPipeline(PipelineType.RASTERIZATION, stageId, manager, context);
+                if (shouldTranslucentFollowSolid(stage, stageId, config)) {
+                    executeStageForPipeline(PipelineType.TRANSLUCENT, stageId, manager, context);
+                } else {
+                    accumulateTranslucentPackets(PipelineType.TRANSLUCENT, stageId);
+                }
+            }
+        }
+    }
+
+    private void executeStageForPipeline(PipelineType pipelineType, KeyId stageId, RenderStateManager manager, C context) {
+        StageExecutionPlan stagePlan = stagePlans.get(stageId);
+        if (stagePlan == null) {
+            return;
+        }
+        PipelineExecutionSlice executionSlice = stagePlan.pipelineSlice(pipelineType);
+        if (executionSlice == null || executionSlice.isEmpty()) {
+            return;
+        }
+        executePacketGroups(executionSlice, manager, context);
+    }
+
+    private void executePacketGroups(PipelineExecutionSlice executionSlice, RenderStateManager manager, C context) {
+        for (int i = 0; i < executionSlice.groupCount(); i++) {
+            PacketGroup group = executionSlice.groupAt(i);
             GraphicsDriver.runtime().frameExecutor().executePacketGroup(
                     graphicsPipeline,
-                    entry.getKey(),
-                    entry.getValue(),
+                    group.stateKey(),
+                    group.packetView(),
                     manager,
                     context);
         }
     }
 
     private void accumulateTranslucentPackets(PipelineType pipelineType, KeyId stageId) {
-        Map<KeyId, Map<PipelineStateKey, List<RenderPacket>>> stageMap = packetsByPipelineAndStage.get(pipelineType);
-        if (stageMap == null) {
+        StageExecutionPlan stagePlan = stagePlans.get(stageId);
+        if (stagePlan == null) {
+            return;
+        }
+        PipelineExecutionSlice executionSlice = stagePlan.pipelineSlice(pipelineType);
+        if (executionSlice == null || executionSlice.isEmpty()) {
             return;
         }
 
-        Map<PipelineStateKey, List<RenderPacket>> stagePackets = stageMap.get(stageId);
-        if (stagePackets == null || stagePackets.isEmpty()) {
-            return;
-        }
-
-        Map<PipelineStateKey, List<RenderPacket>> deferred = deferredTranslucentPackets.computeIfAbsent(
+        ObjectArrayList<PacketGroup> deferredGroups = deferredTranslucentPackets.computeIfAbsent(
                 pipelineType,
-                key -> new LinkedHashMap<>());
-        for (Map.Entry<PipelineStateKey, List<RenderPacket>> entry : stagePackets.entrySet()) {
-            deferred.computeIfAbsent(entry.getKey(), key -> new ArrayList<>()).addAll(entry.getValue());
+                key -> new ObjectArrayList<>());
+        for (int i = 0; i < executionSlice.groupCount(); i++) {
+            deferredGroups.add(executionSlice.groupAt(i));
         }
     }
 
@@ -292,12 +332,37 @@ public class RenderPacketQueue<C extends RenderContext> {
         List<PipelineType> pipelineTypes = new ArrayList<>(deferredTranslucentPackets.keySet());
         pipelineTypes.sort(Comparator.comparingInt(PipelineType::getPriority));
         for (PipelineType pipelineType : pipelineTypes) {
-            Map<PipelineStateKey, List<RenderPacket>> packets = deferredTranslucentPackets.get(pipelineType);
-            if (packets != null && !packets.isEmpty()) {
-                executePacketMap(packets, manager, context);
+            ObjectArrayList<PacketGroup> groups = deferredTranslucentPackets.get(pipelineType);
+            if (groups == null || groups.isEmpty()) {
+                continue;
+            }
+            for (int i = 0; i < groups.size(); i++) {
+                PacketGroup group = groups.get(i);
+                GraphicsDriver.runtime().frameExecutor().executePacketGroup(
+                        graphicsPipeline,
+                        group.stateKey(),
+                        group.packetView(),
+                        manager,
+                        context);
             }
         }
         deferredTranslucentPackets.clear();
+    }
+
+    private SnapshotScope buildDeferredTranslucentSnapshotScope() {
+        Map<PipelineType, Map<ExecutionKey, List<RenderPacket>>> deferredPackets = new java.util.LinkedHashMap<>();
+        for (Map.Entry<PipelineType, ObjectArrayList<PacketGroup>> entry : deferredTranslucentPackets.entrySet()) {
+            if (entry.getValue() == null || entry.getValue().isEmpty()) {
+                continue;
+            }
+            Map<ExecutionKey, List<RenderPacket>> statePackets = new java.util.LinkedHashMap<>();
+            for (int i = 0; i < entry.getValue().size(); i++) {
+                PacketGroup group = entry.getValue().get(i);
+                statePackets.put(group.stateKey(), group.packetView());
+            }
+            deferredPackets.put(entry.getKey(), Map.copyOf(statePackets));
+        }
+        return StageExecutionPlan.fromPackets(DEFERRED_TRANSLUCENT_SCOPE, deferredPackets).stageSnapshotScope();
     }
 
     private boolean shouldTranslucentFollowSolid(GraphicsStage stage, KeyId stageId, PipelineConfig config) {
@@ -316,57 +381,45 @@ public class RenderPacketQueue<C extends RenderContext> {
             return;
         }
 
-        PipelineStateKey stateKey = packet.stateKey();
         KeyId stageId = packet.stageId();
-        stagedPackets.add(stageId);
-
-        Map<PipelineStateKey, List<RenderPacket>> pipelinePackets = packetsByPipeline.computeIfAbsent(
-                pipelineType,
-                pt -> {
-                    initializePipeline(pt);
-                    return packetsByPipeline.get(pt);
-                });
-        pipelinePackets.computeIfAbsent(stateKey, key -> new ArrayList<>()).add(packet);
-
-        Map<KeyId, Map<PipelineStateKey, List<RenderPacket>>> stageMap = packetsByPipelineAndStage.computeIfAbsent(
-                pipelineType,
-                pt -> {
-                    initializePipeline(pt);
-                    return packetsByPipelineAndStage.get(pt);
-                });
-        stageMap.computeIfAbsent(stageId, key -> new LinkedHashMap<>())
-                .computeIfAbsent(stateKey, key -> new ArrayList<>())
-                .add(packet);
 
         if (updateStagePlan) {
-            stagePlans.put(stageId, StageExecutionPlan.fromPackets(stageId, copyStagePackets(stageId)));
+            stagePlans.put(stageId, appendPacket(stagePlans.get(stageId), pipelineType, packet));
             traceQueued(stageId, List.of(packet));
         }
     }
 
-    private Map<PipelineType, Map<PipelineStateKey, List<RenderPacket>>> copyStagePackets(KeyId stageId) {
-        Map<PipelineType, Map<PipelineStateKey, List<RenderPacket>>> copied = new LinkedHashMap<>();
-        for (Map.Entry<PipelineType, Map<KeyId, Map<PipelineStateKey, List<RenderPacket>>>> pipelineEntry : packetsByPipelineAndStage.entrySet()) {
-            Map<PipelineStateKey, List<RenderPacket>> states = pipelineEntry.getValue().get(stageId);
-            if (states == null || states.isEmpty()) {
-                continue;
-            }
-            Map<PipelineStateKey, List<RenderPacket>> stateCopy = new LinkedHashMap<>();
-            for (Map.Entry<PipelineStateKey, List<RenderPacket>> stateEntry : states.entrySet()) {
-                stateCopy.put(stateEntry.getKey(), List.copyOf(stateEntry.getValue()));
-            }
-            copied.put(pipelineEntry.getKey(), Collections.unmodifiableMap(stateCopy));
-        }
-        return copied;
+    private StageExecutionPlan appendPacket(
+            StageExecutionPlan existingPlan,
+            PipelineType pipelineType,
+            RenderPacket packet) {
+        Map<PipelineType, Map<ExecutionKey, List<RenderPacket>>> stagePackets =
+                existingPlan != null ? new java.util.LinkedHashMap<>(existingPlan.packets()) : new java.util.LinkedHashMap<>();
+        Map<ExecutionKey, List<RenderPacket>> statePackets =
+                new java.util.LinkedHashMap<>(stagePackets.getOrDefault(pipelineType, Map.of()));
+        List<RenderPacket> packets = new ArrayList<>(statePackets.getOrDefault(packet.stateKey(), List.of()));
+        packets.add(packet);
+        statePackets.put(packet.stateKey(), List.copyOf(packets));
+        stagePackets.put(pipelineType, Map.copyOf(statePackets));
+        return StageExecutionPlan.fromPackets(packet.stageId(), stagePackets);
     }
 
     private boolean hasPacketsInStages(List<KeyId> stageIds) {
         for (KeyId stageId : stageIds) {
-            if (stagedPackets.contains(stageId)) {
+            if (stagePlans.containsKey(stageId)) {
                 return true;
             }
         }
         return false;
+    }
+
+    private boolean hasStagePipelinePackets(KeyId stageId, PipelineType pipelineType) {
+        StageExecutionPlan stagePlan = stagePlans.get(stageId);
+        if (stagePlan == null) {
+            return false;
+        }
+        PipelineExecutionSlice executionSlice = stagePlan.pipelineSlice(pipelineType);
+        return executionSlice != null && !executionSlice.isEmpty();
     }
 
     private void traceQueued(KeyId stageId, List<RenderPacket> packets) {
@@ -375,12 +428,12 @@ public class RenderPacketQueue<C extends RenderContext> {
             return;
         }
         for (RenderPacket packet : packets) {
-            if (packet == null || packet.completionGraphics() == null) {
+            if (packet == null || packet.completionSubjects() == null) {
                 continue;
             }
-            for (var graphics : packet.completionGraphics()) {
-                if (graphics != null) {
-                    renderTraceRecorder.recordQueueInstalled(stageId, graphics);
+            for (var subject : packet.completionSubjects()) {
+                if (subject != null) {
+                    renderTraceRecorder.recordQueueInstalled(stageId, subject);
                 }
             }
         }
