@@ -1,45 +1,37 @@
 package rogo.sketch.core.pipeline.flow.v2;
 
-import rogo.sketch.core.api.graphics.AsyncTickable;
-import rogo.sketch.core.api.graphics.FunctionalGraphics;
-import rogo.sketch.core.api.graphics.Graphics;
-import rogo.sketch.core.api.graphics.Tickable;
-import rogo.sketch.core.instance.function.FunctionCommandCompilerRegistry;
-import rogo.sketch.core.instance.StandardFunctionGraphics;
-import rogo.sketch.core.packet.PipelineStateKey;
+import rogo.sketch.core.graphics.ecs.GraphicsBuiltinComponents;
+import rogo.sketch.core.graphics.ecs.FunctionCommands;
+import rogo.sketch.core.graphics.ecs.GraphicsUniformSubject;
+import rogo.sketch.core.graphics.ecs.GraphicsEntityAssembler;
+import rogo.sketch.core.graphics.ecs.GraphicsWorld;
+import rogo.sketch.core.packet.ClearPacket;
+import rogo.sketch.core.packet.ExecutionKey;
+import rogo.sketch.core.packet.GenerateMipmapPacket;
 import rogo.sketch.core.packet.RenderPacket;
+import rogo.sketch.core.packet.TransferPlanKey;
+import rogo.sketch.core.pipeline.CompiledRenderSetting;
+import rogo.sketch.core.pipeline.PartialRenderSetting;
 import rogo.sketch.core.pipeline.PipelineType;
 import rogo.sketch.core.pipeline.RenderContext;
-import rogo.sketch.core.pipeline.container.GraphicsContainer;
+import rogo.sketch.core.pipeline.RenderSetting;
+import rogo.sketch.core.pipeline.RenderSettingCompiler;
 import rogo.sketch.core.pipeline.flow.RenderFlowType;
 import rogo.sketch.core.pipeline.flow.RenderPostProcessors;
-import rogo.sketch.core.pipeline.flow.container.DefaultBatchContainers;
-import rogo.sketch.core.pipeline.module.diagnostic.SketchDiagnostics;
-import rogo.sketch.core.util.KeyId;
+import rogo.sketch.core.shader.uniform.UniformValueSnapshot;
 
 import java.util.ArrayList;
-import java.util.Collections;
+import java.util.Comparator;
 import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Map;
-import java.util.function.Supplier;
 
 public final class FunctionStageFlowScene<C extends RenderContext> implements StageFlowScene<C> {
-    private static final String DIAGNOSTIC_MODULE = "function-stage-flow";
-
     private final PipelineType pipelineType;
-    private final FunctionInstanceStore instanceStore = new FunctionInstanceStore();
-    private final FunctionExecutionOrderIndex executionOrderIndex = new FunctionExecutionOrderIndex();
-    private final FunctionCommandCompilerRegistry compilerRegistry;
-    private long orderCounter = 0L;
+    private final FunctionEntityStateCache stateCache = new FunctionEntityStateCache();
 
     public FunctionStageFlowScene(PipelineType pipelineType) {
-        this(pipelineType, FunctionCommandCompilerRegistry.standard());
-    }
-
-    public FunctionStageFlowScene(PipelineType pipelineType, FunctionCommandCompilerRegistry compilerRegistry) {
         this.pipelineType = pipelineType;
-        this.compilerRegistry = compilerRegistry;
     }
 
     @Override
@@ -48,104 +40,124 @@ public final class FunctionStageFlowScene<C extends RenderContext> implements St
     }
 
     @Override
-    public void registerGraphicsInstance(
-            Graphics graphics,
-            rogo.sketch.core.pipeline.parmeter.RenderParameter renderParameter,
-            KeyId containerId,
-            Supplier<? extends GraphicsContainer<? extends RenderContext>> supplier) {
-        if (!(graphics instanceof FunctionalGraphics functionalGraphics)) {
-            throw new IllegalArgumentException("Function stage requires FunctionalGraphics, got: "
-                    + (graphics != null ? graphics.getClass().getName() : "null"));
+    public void prepareForFrame(GraphicsWorld world, StageEntityView view, C context) {
+        List<StageEntityView.Entry> entries = view != null ? view.functionEntries() : List.of();
+        stateCache.retainOnly(view != null ? view.functionEntityIds() : List.of());
+        for (StageEntityView.Entry entry : entries) {
+            if (entry == null || entry.shouldDiscard()) {
+                continue;
+            }
+            FunctionEntityStateCache.Entry state = stateCache.upsert(entry.entityId());
+            CompiledRenderSetting compiledRenderSetting = entry.buildRenderDescriptor();
+            if (compiledRenderSetting == null && entry.renderParameter() != null) {
+                RenderSetting renderSetting = RenderSetting.fromPartial(entry.renderParameter(), PartialRenderSetting.EMPTY);
+                compiledRenderSetting = RenderSettingCompiler.compile(renderSetting);
+                state.setRenderSetting(renderSetting);
+            } else if (compiledRenderSetting != null) {
+                state.setRenderSetting(compiledRenderSetting.renderSetting());
+            }
+            state.setCompiledRenderSetting(compiledRenderSetting);
         }
-
-        instanceStore.remove(functionalGraphics);
-        instanceStore.register(
-                functionalGraphics,
-                renderParameter,
-                resolveContainerType(containerId),
-                orderCounter++);
     }
 
     @Override
-    public void tick(C context) {
-        for (FunctionInstanceStore.Entry entry : instanceStore.records()) {
-            if (entry.graphics() instanceof Tickable tickable) {
-                tickable.tick();
+    public void tick(GraphicsWorld world, StageEntityView view, C context) {
+        if (view == null) {
+            return;
+        }
+        for (StageEntityView.Entry entry : view.functionEntries()) {
+            entry.tick();
+        }
+    }
+
+    @Override
+    public void asyncTick(GraphicsWorld world, StageEntityView view, C context) {
+        if (view == null) {
+            return;
+        }
+        for (StageEntityView.Entry entry : view.functionEntries()) {
+            entry.asyncTick();
+        }
+    }
+
+    @Override
+    public void swapData(GraphicsWorld world, StageEntityView view) {
+        if (view == null) {
+            return;
+        }
+        for (StageEntityView.Entry entry : view.functionEntries()) {
+            entry.swapData();
+        }
+    }
+
+    @Override
+    public void cleanupDiscardedEntities(GraphicsWorld world, GraphicsEntityAssembler assembler, StageEntityView view) {
+        if (view == null || assembler == null) {
+            return;
+        }
+        for (StageEntityView.Entry entry : view.functionEntries()) {
+            if (entry.shouldDiscard()) {
+                assembler.destroy(entry.entityId());
             }
         }
     }
 
     @Override
-    public void asyncTick(C context) {
-        for (FunctionInstanceStore.Entry entry : instanceStore.records()) {
-            if (entry.graphics() instanceof AsyncTickable asyncTickable) {
-                asyncTickable.asyncTick();
-            }
-        }
-    }
-
-    @Override
-    public void swapData() {
-        for (FunctionInstanceStore.Entry entry : instanceStore.records()) {
-            if (entry.graphics() instanceof AsyncTickable asyncTickable) {
-                asyncTickable.swapData();
-            }
-        }
-    }
-
-    @Override
-    public void prepareForFrame() {
-        for (FunctionInstanceStore.Entry entry : instanceStore.records()) {
-            if (!entry.graphics().shouldDiscard()) {
-                entry.refreshCompiledRenderSetting();
-            }
-        }
-    }
-
-    @Override
-    public void cleanupDiscardedInstances() {
-        List<FunctionalGraphics> toRemove = new ArrayList<>();
-        for (FunctionInstanceStore.Entry entry : instanceStore.records()) {
-            if (entry.graphics().shouldDiscard()) {
-                toRemove.add(entry.graphics());
-            }
-        }
-        for (FunctionalGraphics graphics : toRemove) {
-            instanceStore.remove(graphics);
-        }
-    }
-
-    @Override
-    public Map<PipelineStateKey, List<RenderPacket>> createRenderPackets(
-            KeyId stageId,
+    public Map<ExecutionKey, List<RenderPacket>> createRenderPackets(
+            StageEntityView view,
             RenderFlowType flowType,
             RenderPostProcessors postProcessors,
             C context) {
-        List<FunctionInstanceStore.Entry> activeEntries = new ArrayList<>();
-        for (FunctionInstanceStore.Entry entry : instanceStore.records()) {
-            if (!entry.graphics().shouldDiscard() && entry.graphics().shouldRender()) {
-                activeEntries.add(entry);
+        if (view == null || view.isEmpty()) {
+            return Map.of();
+        }
+
+        List<StageEntityView.Entry> activeEntries = new ArrayList<>();
+        for (StageEntityView.Entry entry : view.functionEntries()) {
+            if (entry == null || entry.shouldDiscard() || !entry.shouldRender()) {
+                continue;
             }
+            FunctionEntityStateCache.Entry cached = stateCache.upsert(entry.entityId());
+            if (cached.compiledRenderSetting() == null) {
+                CompiledRenderSetting compiledRenderSetting = entry.buildRenderDescriptor();
+                if (compiledRenderSetting == null && entry.renderParameter() != null) {
+                    RenderSetting renderSetting = RenderSetting.fromPartial(entry.renderParameter(), PartialRenderSetting.EMPTY);
+                    compiledRenderSetting = RenderSettingCompiler.compile(renderSetting);
+                    cached.setRenderSetting(renderSetting);
+                } else if (compiledRenderSetting != null) {
+                    cached.setRenderSetting(compiledRenderSetting.renderSetting());
+                }
+                cached.setCompiledRenderSetting(compiledRenderSetting);
+            }
+            if (cached.compiledRenderSetting() == null) {
+                continue;
+            }
+            activeEntries.add(entry);
         }
         if (activeEntries.isEmpty()) {
-            return Collections.emptyMap();
+            return Map.of();
         }
 
-        List<FunctionCommandSlice> slices = buildSlices(executionOrderIndex.order(activeEntries));
-        if (slices.isEmpty()) {
-            return Collections.emptyMap();
-        }
+        activeEntries.sort(Comparator
+                .comparingInt((StageEntityView.Entry entry) -> functionPriority(entry.functionInvoke()))
+                .thenComparingLong(StageEntityView.Entry::orderHint));
 
-        Map<PipelineStateKey, List<RenderPacket>> packets = new LinkedHashMap<>();
-        for (FunctionCommandSlice slice : slices) {
-            PipelineStateKey stateKey = slice.compiledRenderSetting().pipelineStateKey();
-            List<RenderPacket> statePackets = packets.computeIfAbsent(stateKey, ignored -> new ArrayList<>());
-            for (FunctionCommandSlice.Invocation invocation : slice.invocations()) {
-                RenderPacket packet = convertCommand(
-                        stageId,
-                        slice.compiledRenderSetting(),
-                        invocation.entry().graphics(),
-                        invocation.command());
+        Map<ExecutionKey, List<RenderPacket>> packets = new LinkedHashMap<>();
+        for (StageEntityView.Entry entry : activeEntries) {
+            FunctionEntityStateCache.Entry cached = stateCache.upsert(entry.entityId());
+            CompiledRenderSetting compiledRenderSetting = cached.compiledRenderSetting();
+            if (compiledRenderSetting == null) {
+                continue;
+            }
+            List<FunctionCommands.Command> commands = extractCommands(entry.functionInvoke());
+            if (commands.isEmpty()) {
+                continue;
+            }
+            List<RenderPacket> statePackets = packets.computeIfAbsent(
+                    compiledRenderSetting.pipelineStateKey(),
+                    ignored -> new ArrayList<>());
+            for (FunctionCommands.Command command : commands) {
+                RenderPacket packet = compileCommand(view.stageId(), compiledRenderSetting, entry, command);
                 if (packet != null) {
                     statePackets.add(packet);
                 }
@@ -156,73 +168,74 @@ public final class FunctionStageFlowScene<C extends RenderContext> implements St
 
     @Override
     public void clear() {
-        instanceStore.clear();
     }
 
-    @Override
-    public void removeGraphicsInstance(Graphics graphics) {
-        if (graphics instanceof FunctionalGraphics functionalGraphics) {
-            instanceStore.remove(functionalGraphics);
+    private int functionPriority(GraphicsBuiltinComponents.FunctionInvokeComponent component) {
+        return component != null ? component.priority() : 100;
+    }
+
+    private List<FunctionCommands.Command> extractCommands(GraphicsBuiltinComponents.FunctionInvokeComponent component) {
+        if (component == null || component.payload() == null) {
+            return List.of();
         }
-    }
-
-    @Override
-    public int instanceCount() {
-        return instanceStore.size();
-    }
-
-    @Override
-    public boolean hasInstances() {
-        return !instanceStore.isEmpty();
-    }
-
-    private List<FunctionCommandSlice> buildSlices(List<FunctionInstanceStore.Entry> orderedEntries) {
-        Map<PipelineStateKey, List<FunctionCommandSlice.Invocation>> groupedInvocations = new LinkedHashMap<>();
-        Map<PipelineStateKey, rogo.sketch.core.pipeline.CompiledRenderSetting> settingsByState = new LinkedHashMap<>();
-
-        for (FunctionInstanceStore.Entry entry : orderedEntries) {
-            if (!(entry.graphics() instanceof StandardFunctionGraphics standardFunctionGraphics)) {
-                SketchDiagnostics.get().warn(
-                        DIAGNOSTIC_MODULE,
-                        "Skipping non-standard function graphics in new function flow: "
-                                + entry.graphics().getIdentifier());
-                continue;
+        Object payload = component.payload();
+        if (payload instanceof FunctionCommands.Command[] commands) {
+            List<FunctionCommands.Command> copied = new ArrayList<>(commands.length);
+            for (FunctionCommands.Command command : commands) {
+                if (command != null) {
+                    copied.add(command);
+                }
             }
-
-            PipelineStateKey stateKey = entry.compiledRenderSetting().pipelineStateKey();
-            List<FunctionCommandSlice.Invocation> invocations = groupedInvocations.computeIfAbsent(stateKey, ignored -> new ArrayList<>());
-            settingsByState.putIfAbsent(stateKey, entry.compiledRenderSetting());
-            for (StandardFunctionGraphics.Command command : standardFunctionGraphics.commands()) {
-                invocations.add(new FunctionCommandSlice.Invocation(entry, command));
+            return List.copyOf(copied);
+        }
+        if (payload instanceof List<?> rawList) {
+            List<FunctionCommands.Command> copied = new ArrayList<>(rawList.size());
+            for (Object value : rawList) {
+                if (value instanceof FunctionCommands.Command command) {
+                    copied.add(command);
+                }
             }
+            return List.copyOf(copied);
         }
-
-        List<FunctionCommandSlice> slices = new ArrayList<>(groupedInvocations.size());
-        for (Map.Entry<PipelineStateKey, List<FunctionCommandSlice.Invocation>> grouped : groupedInvocations.entrySet()) {
-            slices.add(new FunctionCommandSlice(settingsByState.get(grouped.getKey()), grouped.getValue()));
-        }
-        return slices;
+        return List.of();
     }
 
-    private RenderPacket convertCommand(
-            KeyId stageId,
-            rogo.sketch.core.pipeline.CompiledRenderSetting compiledRenderSetting,
-            FunctionalGraphics graphics,
-            StandardFunctionGraphics.Command command) {
+    private RenderPacket compileCommand(
+            rogo.sketch.core.util.KeyId stageId,
+            CompiledRenderSetting compiledRenderSetting,
+            StageEntityView.Entry entry,
+            FunctionCommands.Command command) {
         if (compiledRenderSetting == null || command == null) {
             return null;
         }
-        return compilerRegistry.compile(stageId, pipelineType, compiledRenderSetting, graphics, command);
-    }
-
-    private KeyId resolveContainerType(KeyId requested) {
-        if (requested == null) {
-            return DefaultBatchContainers.PRIORITY;
+        List<GraphicsUniformSubject> completionSubjects = entry.uniformSubject() != null ? List.of(entry.uniformSubject()) : List.of();
+        if (command instanceof FunctionCommands.ClearCommand clearCommand) {
+            return new ClearPacket(
+                    stageId,
+                    pipelineType,
+                    TransferPlanKey.forRenderTarget(clearCommand.renderTargetId()),
+                    compiledRenderSetting.resourceBindingPlan(),
+                    UniformValueSnapshot.empty(),
+                    completionSubjects,
+                    clearCommand.renderTargetId(),
+                    clearCommand.colorAttachments(),
+                    clearCommand.clearColor(),
+                    clearCommand.clearDepth(),
+                    clearCommand.clearColorValue(),
+                    clearCommand.clearDepthValue(),
+                    clearCommand.colorMask(),
+                    clearCommand.restorePreviousRenderTarget());
         }
-        if (DefaultBatchContainers.QUEUE.equals(requested) || DefaultBatchContainers.PRIORITY.equals(requested)) {
-            return requested;
+        if (command instanceof FunctionCommands.GenMipmapCommand genMipmapCommand) {
+            return new GenerateMipmapPacket(
+                    stageId,
+                    pipelineType,
+                    TransferPlanKey.forTexture(genMipmapCommand.textureId()),
+                    compiledRenderSetting.resourceBindingPlan(),
+                    UniformValueSnapshot.empty(),
+                    completionSubjects,
+                    genMipmapCommand.textureId());
         }
-        return DefaultBatchContainers.PRIORITY;
+        return null;
     }
 }
-
